syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcServices.Protos";

package friend;

//Method to receive user's friend ids
message GetFriendIdsRequest {
	int32 userId = 1;
}
message GetFriendIdsResponse {
	repeated int32 friends = 1;
	bool success = 2;
}

message FriendObj { //This is not mappable object since the different property names
	bool success = 1;

	int32 receiverId = 2;
	int32 authorId = 3;
	int32 friendshipStatusId = 4;
	google.protobuf.Timestamp friendship_since = 5;
	
}

message GetAllFriendshipResponse {
	repeated FriendObj friends = 1;
}
service Friend {
	rpc GetFriendsForUser (GetFriendIdsRequest) returns (GetFriendIdsResponse); 
	rpc CreateFriendshipIfNotExists (FriendObj) returns (FriendObj);
	rpc GetFriendship (FriendObj) returns (FriendObj);
	rpc RemoveFriendshipIfExists (FriendObj) returns (FriendObj);
}